<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CarryU</string>
    <string name="lol_user_id">ID</string>
    <string name="lol_user_password">Password</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="logging_in">Logging in...</string>
    <string name="connecting">Connecting to server</string>
    <string name="our_summoner">Our Team</string>
    <string name="enemy_summoner">Enemy Team</string>
    <string name="champion_guide">Champion Guide</string>
    <string name="kr_server">Korea</string>
    <string name="na_server">North America</string>
    <string name="euw_server">Europe West</string>
    <string name="level_format">Lv %1$d</string>
    <string name="display_ranked_stat_with_mmr_format">Rank %1$d wins / MMR %2$.0f</string>
    <string name="display_ranked_stat_format">Rank %1$d wins / MMR -</string>
    <string name="display_unranked_stat_with_mmr_format">Normal %1$d wins / MMR %2$.0f</string>
    <string name="display_unranked_stat_format">Normal %1$d wins / MMR -</string>
    <string name="kda">KDA %1$.2f</string>
    <string name="kda_not_found">KDA -</string>
    <string name="summoner_stat_mmr_format">MMR %1$d</string>
    <string name="loading">Loading...</string>
    <string name="load_failed">Failed</string>
    <string name="input_summoner_name">Summoner name</string>
    <string name="login_lol_account">Login with your LOL account</string>
    <string name="choose_region_desc">Please choose the server region</string>
    <string name="select_region">Server region change</string>
    <string name="searching_for_match">Searching for the Match</string>
    <string name="welcome_message">Start the game.\nThe stats of both team will show automatically.</string>

    <string name="login_with_riot_account_desc">Login with LOL account bring game info automatically</string>
    <string name="login_with_riot_account_btn_title">Login with LOL account</string>
    <string name="login_with_summoner_name_desc">Quick login with summoner name \n research manually</string>
    <string name="login_with_summoner_name_btn_title">Login with summoner name</string>
    <string name="preview_sample_game_desc">If you want to know the real time game search results?</string>
    <string name="signin_with_summoner_name_header">Please enter the summoner name you are searching for.</string>

    <string name="sample">Preview Sample</string>
    <string name="can_not_find_active_game">AI battle not supported.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_app">Would you like to exit CarryU? (Your LOL chatting status may go offline when terminating the app. In this case, please turn your status back to online on your LOL client.)</string>
    <string name="notice">Notice</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_off">Keep screen off</string>
    <string name="search">Search</string>
    <string name="online_status_message">Using CarryU</string>
    <string name="password_notice">Account will be used to connect LOL server for detecting your status in real time. Your account will be not saved in CarryU server.</string>
</resources>
